--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "@feathersjs/transport-commons": "^4.5.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dauria": "^2.0.0",
+    "feathers-blob": "^2.2.0",
     "feathers-objection": "^4.8.1",
+    "fs-blob-store": "^5.2.1",
     "helmet": "^3.21.3",
     "knex": "^0.20.10",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "objection": "^2.1.3",
     "serve-favicon": "^2.5.0",
