--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mysql2": "^2.1.0",
     "objection": "^2.1.3",
     "serve-favicon": "^2.5.0",
+    "string-similarity": "^4.0.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
